@@ -1,3 +1,9 @@
+2003-07-09  Hideyuki SHIRAI  <shirai@meadowy.org>
+
+	* mew-w3m.el (w3m-mew-support-cid): Check `mew-version-number'.
+	(mew-w3m-cid-retrieve): Support Mew 4.0.53 and later.
+	Thanks to Kazu YAMAMOTO for his patch.
+
 2003-07-09  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
 
 	* w3m.el (w3m-uri-replace-alist): Add `rpm', `waei', `eiwa',
